--- a/src/module/login/login.html
+++ b/src/module/login/login.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="loginPage">
-        <headwrap title="财务对账系统" :need-upload="false" :need-logfoo="false"></headwrap>
+        <use-head title="财务对账系统" :need-upload="false" :need-logfoo="false"></use-head>
         <div class="loginMidWrap">
             <div class="loginFrame" v-cloak>
                 <p>账户登录</p>
