--- a/src/module/detail/detail.html
+++ b/src/module/detail/detail.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="detailPage" v-cloak>
-    <headwrap title="对账详情" :need-upload="false" :need-logfoo="true"></headwrap>
+    <use-head title="对账详情" :need-upload="false" :need-logfoo="true"></use-head>
     <div class="detail-wrapper">
       <ul class="infOfdetail clearfix">
         <li>对账信息：</li>
@@ -42,7 +42,7 @@
               <th>收入金额(元)</th>
               <th>支出金额(元)</th>
               <th>业务类型</th>
-              <th class="w180"><selector class="selectStyc" select-type="verify" default-html="核对结果" :default-val="verifyRes"  select-mean="verify" @chooseopt="handledata"></selector></th>
+              <th class="w180"><use-selector class="selectStyc" select-type="verify" default-html="核对结果" :default-val="verifyRes"  select-mean="verify" @chooseopt="handledata"></use-selector></th>
               <th class="w300">操作</th>
             </tr>
             <tr v-for="item in billDetailList">
@@ -55,7 +55,7 @@
               <td class="handleConf" v-else><span @click="handComfirmEvent(item)">手动确认</span></td>
             </tr>
           </table>
-          <pagination v-if="detailTotal > 0" @getnewpage="getBillNewPage" :total-items="detailTotal" :page-size="pageSize"></pagination>
+          <use-pagination v-if="detailTotal > 0" @getnewpage="getBillNewPage" :total-items="detailTotal" :page-size="pageSize"></use-pagination>
         </div>
         <div v-show="!ischeckDetailTab">
           <div class="overview clearfix">
@@ -81,12 +81,12 @@
               <td class="handleConf" v-else><span @click="handComfirmEvent(item)">手动确认</span></td>
             </tr>
           </table>
-          <pagination v-if="uncheckTotal > 0" @getnewpage="getUncheckNewPage" :total-items="uncheckTotal" :page-size="pageSize"></pagination>
+          <use-pagination v-if="uncheckTotal > 0" @getnewpage="getUncheckNewPage" :total-items="uncheckTotal" :page-size="pageSize"></use-pagination>
         </div>
       </div>
     </div>
-    <loadiner v-if="isloading"></loadiner>
-    <dialogpop v-if="isShowthis" :con-type="dialogType" :con-title="dialogTitle" :con-rank="dialogRank" :dialog-sub="hasDialogsub" @dialogclose="closeEvent"  @handeventsure="tohandeventsure"><p>{{dialogHtml}}</p><p v-if="hasDialogsub">{{dialogHtmlSub}}</dialogpop>
+    <use-load v-if="isloading"></use-load>
+    <use-dialog v-if="isShowthis" :con-type="dialogType" :con-title="dialogTitle" :con-rank="dialogRank" :dialog-sub="hasDialogsub" @dialogclose="closeEvent"  @handeventsure="tohandeventsure"><p>{{dialogHtml}}</p><p v-if="hasDialogsub">{{dialogHtmlSub}}</use-dialog>
   </div>
 </body>
 </html>
